--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 :root {
     --size: 827px;  /* 229px; */
     --square-size: calc(var(--size) / 2.86);
-    --inner-square-size: calc(var(--square-size) - 29%);
+    --inner-square-size: calc(var(--square-size) - 28%);
+    --shadow-size: calc(var(--inner-square-size) + 10%);
 }
 
 body {
@@ -24,7 +25,7 @@ body {
     height: var(--square-size);
     width: var(--square-size);
     transform: rotate(45deg);
-    border-radius: 7%;
+    border-radius: 6%;
 }
 
 #logo > .square:first-child {
@@ -34,6 +35,25 @@ body {
     margin-bottom: 1.2%;
     margin-right: 18.2%;
     background-color: #ecd0f6;
+}
+
+#logo>.square:first-child::before, #logo>.square:first-child::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+#logo>.square:first-child::before {
+    width: 14.5%;
+    height: var(--shadow-size);
+    background: linear-gradient(#b499c3 82%, transparent);
+}
+
+#logo>.square:first-child::after {
+    height: 14.5%;
+    width: var(--shadow-size);
+    background: linear-gradient(90deg, transparent, #b499c3 18%);
 }
 
 .square:nth-of-type(2){
